<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dot_fusion</name>
  <version>0.0.0</version>
  <description>The dot_fusion package</description>
  <maintainer email="gustavocomerlato@gmail.com">Gustavo Comerlato</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>Eigen</depend>
  <depend>tf2_ros</depend>
  <!-- <depend>tf2_</depend> -->
  <depend>movella_dot</depend>
  <depend>movella_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
