<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>movella_dot_ros</name>
  <version>0.0.1</version>
  <description>Metapackage for the Movella DOT ROS 2 integration tools</description>

  <maintainer email="gustavocomerlato@gmail.com">Gustavo Comerlato</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>movella_dot</exec_depend>
  <exec_depend>movella_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
